# cendre

./: .gitignore  Cargo.toml  README.md
assets/shaders/: mesh.frag.glsl  mesh.h  mesh.vert.glsl  mesh.vert.wgsl  meshlet.mesh.glsl  meshlet.task.glsl  triangle.frag.spv  triangle.frag.wgsl  triangle.vert.spv  triangle.vert.wgsl  triangle.vertglsl.glsl
src/: instance.rs  lib.rs  main.rs  mesh.rs  obj_loader.rs  optimized_mesh.rs  plugin.rs  shaders.rs  swapchain.rs
