[package]
name = "cendre"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.70"
ash = { git = "https://github.com/ash-rs/ash.git", rev = "53c395b6b6603faa5cc68d472f8d991f1e3fa126", features = [
    "linked",
    "debug",
] }
ash-window = { git = "https://github.com/ash-rs/ash.git", rev = "53c395b6b6603faa5cc68d472f8d991f1e3fa126" }
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_render",
    "filesystem_watcher",
] }
bytemuck = { version = "1.13.1", features = ["derive"] }
# gpu-allocator = "0.22.0"
# Use a patched version that uses the git version of ash
gpu-allocator = { path = "../gpu-allocator" }
meshopt = "0.1.9"
raw-window-handle = "0.5.2"
shaderc = "0.8.2"
tobj = { version = "4.0.0", features = ["async"] }
winit = "0.28.3"

# Use a custom version of naga with mesh shader hacked in
[dependencies.naga]
# version = "0.11.0"
# path = "../naga"
git = "https://github.com/icesentry/naga.git"
branch = "glsl-mesh-shader"
features = ["wgsl-in", "spv-out", "glsl-in"]
